# QA_lab3

./: .gitignore  README.md  README_ATTENDANCE.md  activate_conda_env.bat  conda_setup.sh  environment.yml  fixcuda.sh  knn_training_data.pkl  main.py  pyproject.toml  svm_training_data.pkl  trySistem.py
media/test_images/: README.md
service/: BaseFaceRecognitionPipeline.py  recognition_pipeline.py  recognition_service.py  utils.py
service/alignment/: FaceAligner.py  MediapipeFaceAligner.py
service/clasifier/: Clasifier.py  SVMFaceClassifier.py  clasifier.py  knn_classifier.py
service/detection/: detector.py  face_detection.py  retina_face.py
service/normalization/: BasicNormalizer.py  DlibFaceNormalizer.py  MediaPipeFaceNormalizer.py
service/recognition/: ArcFaceRecognition.py  Recognition.py
