[project]
name = "face-recogniton-detection-proyect"
version = "0.1.0"
description = ""
authors = [
    {name = "TDA"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepface (>=0.0.93,<0.0.94)",
    "pillow (>=11.2.1,<12.0.0)",
    "tf-keras (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
