[project]
name = "face-recogniton-detection-proyect"
version = "0.1.0"
description = ""
authors = [
    {name = "TDA"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "deepface (>=0.0.93,<0.0.94)",
    "pillow (>=11.2.1,<12.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "tensorflow-gpu (==2.19.0)",  # Changed to tensorflow-gpu
    "tf-keras (>=2.19.0,<3.0.0)",
    "torch (==2.5.1)",
    "torchvision (==0.20.1)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"
